...
            <!-- Container für das Rezeptbild -->
            <LinearLayout
                android:id="@+id/recipe_image_uploader"
                android:layout_width="match_parent"
                android:elevation="2dp"
...
                    <!-- EditText für Rezeptname -->
                    <EditText
                        android:id="@+id/recipe_title"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
...
                        <!-- Plus-Button -->
                        <ImageButton
                            android:id="@+id/button_plus"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
...
                <!-- Dropdown-Menü -->
                <Spinner
                    android:id="@+id/type_choose"
                    android:layout_width="match_parent"
                    android:padding="8dp"
...
                <!-- Mehrzeiliges EditText -->
                <EditText
                    android:id="@+id/edit_recipe_desc_multiline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <SeekBar
                        android:id="@+id/preptime_seekbar"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/black"
...

                    <SeekBar
                        android:id="@+id/cooktime_seekbar"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/black"
...
            <!-- Rezeptquelle -->
            <EditText
                android:id="@+id/recipe_src_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/option_fortgeschritten"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/checkbox_glutenfrei"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/checkbox_vegetarisch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    <!-- EditText für Zutatenname -->
                    <EditText
                        android:id="@+id/ingredient_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
...
                    <!-- EditText für Rezeptname -->
                    <Spinner
                        android:id="@+id/category_chooser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                <!-- Mehrzeiliges EditText -->
                <EditText
                    android:id="@+id/ingredient_desc_text_multiline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                        <!-- TextInput -->
                        <EditText
                            android:id="@+id/ingredient_amount_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
                        <!-- Dropdown-Menü -->
                        <Spinner
                            android:id="@+id/unit_chooser"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
...
                        <!-- TextInput -->
                        <EditText
                            android:id="@+id/ingredient_price_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
            <!-- Hinzufügen Button -->
            <Button
                android:id="@+id/add_ingredients_to_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                <!-- Mehrzeiliges EditText -->
                <EditText
                    android:id="@+id/edit_text_multiline_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
            <!-- Hinzufügen Button -->
            <Button
                android:id="@+id/add_instructions_to_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/submit_recipe"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
...
