...
            android:layout_marginTop="20dp"
            android:visibility="visible" />
    </LinearLayout>

    <!-- Floating Buttons -->
    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/fab_add"
        app:fab_showShadow="true"
...
