...
                android:textColor="@color/text_background_light"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Button rechts im Layout -->
        <ImageButton
            android:id="@+id/btn_add_to_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black"
            android:padding="4dp"
            android:contentDescription="add_food"
            android:background="@drawable/btn_add_food" />
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btn_select_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="13sp"
            android:fontFamily="sans-serif-light"
            android:paddingVertical="2dp"
...
