...
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/food_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:clipToPadding="false" />
    </LinearLayout>
...
